Push all to Java 17